test/regression/idl/compiler/fail/identifier.idl

module identifier
{
   // Test Forward Declarations
   interface TestForwardDecl;
   interface TestForwardDecl
   {
   };
   interface TestForwardDecl;

   const long thing = 1;

   interface thing
   {
      void doit (in string stringparam);
   };
};
